--- a/biz_auth/requirements.txt
+++ b/biz_auth/requirements.txt
@@ -1,1 +1,5 @@
-django==4.2.11 djangorestframework==3.15.1 djangorestframework-simplejwt==5.3.1 mysqlclient==2.2.4 drf-yasg==1.21.7
+Django==5.1.1
+djangorestframework==3.15.2
+djangorestframework-simplejwt==5.3.1
+mysqlclient==2.2.4
+drf-yasg==1.21.7
