--- a/biz_analytics/Dockerfile
+++ b/biz_analytics/Dockerfile
@@ -1,6 +1,23 @@
+#FROM python:3.11-slim
+#WORKDIR /app
+#COPY requirements.txt .
+#RUN pip install --upgrade pip
+#RUN pip install --no-cache-dir -r requirements.txt
+#COPY . .
+#CMD ["celery", "-A", "tasks", "worker", "--loglevel=info"]
+
+
 FROM python:3.11-slim
+
 WORKDIR /app
+
 COPY requirements.txt .
+RUN pip install --upgrade pip
 RUN pip install --no-cache-dir -r requirements.txt
+
 COPY . .
-CMD ["celery", "-A", "tasks", "worker", "--loglevel=info"]
+
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8002"]
+
+
+
