--- a/biz_analytics/requirements.txt
+++ b/biz_analytics/requirements.txt
@@ -1,5 +1,8 @@
-celery==5.4.0
-elasticsearch==8.15.1
-redis==5.0.8
-fastapi==0.115.0
-uvicorn==0.30.6
+fastapi
+uvicorn[standard]
+elasticsearch
+celery[redis]
+redis
+python-dotenv
+pydantic
+gunicorn
