--- a/biz_auth/Dockerfile
+++ b/biz_auth/Dockerfile
@@ -1,11 +1,35 @@
-FROM python:3.11-slim
-RUN apt-get update && apt-get install -y \
-    libmysqlclient-dev \
-    pkg-config \
-    && rm -rf /var/lib/apt/lists/*
-WORKDIR /app
+#FROM python:3.11-slim
+#RUN apt-get update && apt-get install -y \
+#    build-essential \
+#    default-libmysqlclient-dev \
+#    pkg-config \
+#    && rm -rf /var/lib/apt/lists/*
+#WORKDIR /app
+#COPY requirements.txt .
+#RUN pip install --upgrade pip
+#RUN pip install --no-cache-dir -r requirements.txt
+#COPY . .
+#
+#COPY entrypoint.sh .
+#RUN chmod +x entrypoint.sh
+#CMD ["./entrypoint.sh"]
+#
+
+
+FROM python:3.11
+
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
+
+WORKDIR /code
+
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --upgrade pip
+RUN pip install -r requirements.txt
+
 COPY . .
-CMD ["sh", "-c", "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"]
+
+CMD ["gunicorn", "biz_auth.wsgi:application", "--bind", "0.0.0.0:8000"]
+#CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+
 
