--- a/biz_auth/requirements.txt
+++ b/biz_auth/requirements.txt
@@ -1,5 +1,12 @@
 Django==5.1.1
-djangorestframework==3.15.2
-djangorestframework-simplejwt==5.3.1
-mysqlclient==2.2.4
-drf-yasg==1.21.7
+Django>=4.2
+djangorestframework
+djangorestframework-simplejwt
+mysqlclient
+python-decouple
+gunicorn
+django-widget-tweaks
+drf-yasg
+elasticsearch
+celery
+drf-spectacular
