--- a/biz_crm/requirements.txt
+++ b/biz_crm/requirements.txt
@@ -1,6 +1,8 @@
-celery==5.4.0
-pika==1.3.2
-confluent-kafka==2.5.3
-redis==5.0.8
-fastapi==0.115.0
-uvicorn==0.30.6
+fastapi
+uvicorn[standard]
+celery
+pika
+aiokafka
+pydantic
+python-dotenv
+gunicorn
