--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,111 @@
-#version: '3.8'
+#version: "3.9"
 
 services:
+
+  ##########################
+  # Database Services
+  ##########################
+  mysql:
+    image: mysql:8
+    environment:
+      MYSQL_ROOT_PASSWORD: rootpass
+      MYSQL_DATABASE: biz_auth_db
+      MYSQL_USER: user
+      MYSQL_PASSWORD: password
+    ports:
+      - "4307:3306"
+    volumes:
+      - mysql_data:/var/lib/mysql
+
+  postgres:
+    image: postgres:15
+    environment:
+      POSTGRES_DB: biz_ops_db
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+  redis:
+    image: redis:7
+    ports:
+      - "6379:6379"
+
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.11.1
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=false
+    ports:
+      - "9200:9200"
+    volumes:
+      - elastic_data:/usr/share/elasticsearch/data
+
+  rabbitmq:
+    image: rabbitmq:3-management
+    environment:
+      RABBITMQ_DEFAULT_USER: user
+      RABBITMQ_DEFAULT_PASS: password
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+
+  kafka:
+    image: bitnami/kafka:latest
+    ports:
+      - "9092:9092"
+    environment:
+      - KAFKA_BROKER_ID=1
+      - KAFKA_LISTENERS=PLAINTEXT://:9092
+      - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
+    depends_on:
+      - zookeeper
+
+  zookeeper:
+    image: bitnami/zookeeper:latest
+    ports:
+      - "2181:2181"
+
+  ##########################
+  # Microservices
+  ##########################
   biz_auth:
     build: ./biz_auth
-    ports:
-      - "8000:8000"
     depends_on:
       - mysql
     environment:
-      - DATABASE_URL=mysql://biz_auth_user:biz_auth_pass@mysql:3306/biz_auth_db
+      - DB_HOST=mysql
+      - DB_NAME=biz_auth_db
+      - DB_USER=user
+      - DB_PASSWORD=password
+    ports:
+      - "8001:8000"
+
   biz_ops:
     build: ./biz_ops
-    ports:
-      - "8001:8001"
     depends_on:
       - postgres
     environment:
-      - DATABASE_URL=postgresql://biz_ops_user:biz_ops_pass@postgres:5432/biz_ops_db
+      - DB_HOST=postgres
+      - DB_NAME=biz_ops_db
+      - DB_USER=user
+      - DB_PASSWORD=password
+    ports:
+      - "8002:8000"
+
   biz_analytics:
     build: ./biz_analytics
     depends_on:
       - elasticsearch
       - redis
     environment:
-      - ELASTICSEARCH_URL=http://elasticsearch:9200
-      - REDIS_URL=redis://redis:6379/0
+      - ELASTIC_HOST=elasticsearch
+      - REDIS_HOST=redis
+    ports:
+      - "8003:8000"
+
   biz_crm:
     build: ./biz_crm
     depends_on:
@@ -32,68 +113,13 @@ services:
       - kafka
       - redis
     environment:
-      - RABBITMQ_URL=amqp://guest:guest@rabbitmq:5672//
-      - KAFKA_BROKER=kafka:9092
-      - REDIS_URL=redis://redis:6379/0
-  mysql:
-    image: mysql:8.0
-    environment:
-      MYSQL_DATABASE: biz_auth_db
-      MYSQL_USER: biz_auth_user
-      MYSQL_PASSWORD: biz_auth_pass
-      MYSQL_ROOT_PASSWORD: root_pass
-    volumes:
-      - mysql_data:/var/lib/mysql
+      - RABBITMQ_HOST=rabbitmq
+      - KAFKA_HOST=kafka
+      - REDIS_HOST=redis
     ports:
-      - "3306:3306"
-  postgres:
-    image: postgres:15
-    environment:
-      POSTGRES_DB: biz_ops_db
-      POSTGRES_USER: biz_ops_user
-      POSTGRES_PASSWORD: biz_ops_pass
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
-  redis:
-    image: redis:7
-    ports:
-      - "6379:6379"
-  elasticsearch:
-    image: elasticsearch:8.8.0
-    environment:
-      - discovery.type=single-node
-      - xpack.security.enabled=false
-    volumes:
-      - es_data:/usr/share/elasticsearch/data
-    ports:
-      - "9200:9200"
-  rabbitmq:
-    image: rabbitmq:3-management
-    ports:
-      - "5672:5672"
-      - "15672:15672"
-  kafka:
-    image: confluentinc/cp-kafka:7.4.0
-    depends_on:
-      - zookeeper
-    environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-    ports:
-      - "9092:9092"
-  zookeeper:
-    image: confluentinc/cp-zookeeper:7.4.0
-    environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
-      ZOOKEEPER_TICK_TIME: 2000
-    ports:
-      - "2181:2181"
+      - "8004:8000"
+
 volumes:
   mysql_data:
   postgres_data:
-  es_data:
-
+  elastic_data:
