C16: docker-compose.yml and all Dockerfiles modified again, structure of services is updated now.

--- a/biz_auth/requirements.txt
+++ b/biz_auth/requirements.txt
@@ -5,8 +5,10 @@ djangorestframework-simplejwt
 mysqlclient
 python-decouple
 gunicorn
+pillow
 django-widget-tweaks
 drf-yasg
 elasticsearch
 celery
 drf-spectacular
+django-jazzmin
